k8s/cluster-b/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spire-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: workloads
  labels:
    istio-injection: enabled
